# tg_name_stealer

./: .gitignore  LICENSE  README.md  conf.py  setup.cfg  test.py  tox.ini
src/: requirements.txt
src/stealer/: __main__.py  auth.py  my_account.session  settings.py  stealer.py
src/tests/: auth.py
