[metadata]
name = tg-name-stealer-mindestroyer
version = 0.0.1
author = mindestroyer 
description = A tool for taking away a telegram name. Regularly makes a request to check if the name is unoccupied, and if successful, it takes the name away.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NameEgor/tg_name_stealer
project_urls = 
    Bug Tracker = https://github.com/NameEgor/tg_name_stealer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
